# crm-multiagent-ai-integration

./: .gitignore  Procfile  README.md  crewai_test.py  main.py  pyproject.toml  requirements.in  requirements.txt  start.sh  supervisord.conf  tools.py
app/agents/: agent_declaration.py
app/config/: llm_config.py  patches.py  settings.py
app/config/crew_definitions/: agents.yaml  tasks.yaml
app/config/guidelines/: business_rules.yaml
app/config/utils/: messages_plans.py
app/core/: logger.py
app/crews/: conversation_crew.py  enrichment_crew.py
app/crews/main_crews/: backend_routing.py  communication.py  context_analysis.py  refine_strategy.py  registration.py  routing.py  routing_agent.py  (+2 more)
app/domain_knowledge/: application_features.yaml  business_rules.yaml  communication.yaml  contracts.yaml  operational_procedures.yaml  web_access_features.yaml
app/models/: data_models.py
app/patches/: crewai_telemetry_patch.py  litellm_patch.py
app/services/: cache_service.py  callbell_service.py  celery_Service.py  celery_service.py  eleven_labs_service.py  google_maps_service.py  image_describer_service.py  knowledge_service.py  nlp_service.py  qdrant_service.py  redis_service.py  state_manager_service.py  system_operations_service.py  telegram_service.py  transcript_service.py
app/tasks/: tasks_declaration.py
app/tools/: cache_tools.py  callbell_tools.py  knowledge_tools.py  qdrant_tools.py  system_operations_tools.py
app/utils/: static.py
app/workers/: inactivity_worker.py
config/: agents.yaml  tasks.yaml
knowledges/: general_suport.txt  sales.txt
(+51 files in other folders)
